--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -1,3 +1,34 @@
+html{
+    height: 100vh;
+}
+
 body {
-    background-image: url('/home/raahima/tetris/images/bg.jpg');
+    background-image: url('/home/raahima/tetris/tetris/images/bg.jpg');
+    overflow: hidden;
+    height: 100vh;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: monospace;
+    text-align: center;
+    color: aliceblue;
+}
+
+#score {
+    text-align: center;
+}
+
+
+canvas {
+    align-content: center;
+    display: block;
+    margin:0 auto;
+}
+
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+}
+
+@-ms-viewport {
+    width: device-width ;
 }
