--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -1,22 +1,20 @@
-html{
-    height: 100vh;
-}
 
 body {
     background-image: url('/home/raahima/tetris/tetris/images/bg.jpg');
     overflow: hidden;
-    height: 100vh;
     font-size: 30px;
     font-weight: bold;
     font-family: monospace;
     text-align: center;
     color: aliceblue;
+    padding: 1000px 100px 1000px 100px; 
 }
 
 #score {
     text-align: center;
+    margin-bottom: 75%; 
+    padding: 0px 20px 20px 30px; 
 }
-
 
 canvas {
     align-content: center;
@@ -26,9 +24,5 @@ canvas {
 
 @viewport {
     width: device-width ;
-    zoom: 1.0 ;
-}
-
-@-ms-viewport {
-    width: device-width ;
+    zoom: 1.5 ;
 }
