--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url('/home/raahima/tetris/tetris/images/bg.jpg');
+    background-image: url("../images/bg.jpg");
     font-size: 30px;
     font-weight: bold;
     font-family: monospace;
