--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("../images/bg.jpg");
+    background-image: url("https://github.com/forevermango/forevermango.github.io/blob/main/tetris/images/bg.jpg?raw=true");
     font-size: 30px;
     font-weight: bold;
     font-family: monospace;
