--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -5,14 +5,14 @@ body {
     font-weight: bold;
     font-family: monospace;
     text-align: center;
-    color: rgb(235, 19, 235);
+    color: greenyellow;
     overflow: hidden;
     font-weight: bold;
 }
 
 #score {
     text-align: center;
-    color: rgb(235, 19, 235);
+    color: greenyellow;
 }
 
 canvas {
@@ -22,10 +22,19 @@ canvas {
 }
 
 h2 {
-    color: hotpink;
+    color: greenyellow;
+    font-style: oblique;
+    font-weight: bold;
 }
 
 @viewport {
     width: device-width ;
     zoom: 1.0 ;
   }
+
+  @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
